# XAD_Hackathon

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixView.cpp  README.md  build_and_run.bat  build_and_run.sh  fornebius.cpp  fornebius.hpp  main.cpp  matrix_test.cpp
benchmark code/: Listing_1.cpp  Listing_2.cpp  Listing_3.cpp  listings.hpp
include/: Matrix.hpp  MatrixView.hpp  MatrixViewHelper.hpp  frobeniusNorm.hpp
scripts/: build_and_run.bat  build_and_run.sh
src/: Matrix.cpp  MatrixView.cpp  MatrixViewHelper.cpp  fornebius.cpp  frobeniusNorm.cpp  main.cpp  matrix_test.cpp  matrix_view_helper_test.cpp  matrix_view_test.cpp
